--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "dev": "nodemon backend/server.js",
+    "build":"npm install && --prefix frontend && npm run build --prefix frontend",
+    "start":"node backend/server.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
