--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "build":"npm install && --prefix frontend && npm run build --prefix frontend",
+    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "start":"node backend/server.js"
   },
   "devDependencies": {
