--- a/.env
+++ b/.env
@@ -12,4 +12,5 @@ CLIENT_BASE_URL=http://localhost:3000
 
 MONGO_URI=mongodb+srv://samiransarka123_db_user:8voq74GxctIhir9I@cluster0.7ba7sbp.mongodb.net/git_db?appName=Cluster0
 PORT=5000
-GITHUB_TOKEN=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
+# GITHUB_TOKEN=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
+
